sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:21: error: value ++ is not a member of Int
			i++;
                         ^